--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 
     }
     .header-left{
-      /* padding: 15px 15px 91px 15px !important; */
-      padding: 39px 50px 70px !important;
+      padding: 15px 15px 91px 15px !important;
+      /* padding: 39px 50px 70px !important; */
     }
     .lets-you-row{
       padding: 0 50px;
@@ -54,7 +54,7 @@
       padding: 15px 15px 91px 15px !important;
     } */
     .header-left{
-      /* padding: 15px 15px 91px 15px !important; */
+    `  padding: 15px 15px 91px 15px !important;`
       padding: 39px 50px 70px !important;
     }
   }
